# iot-testing

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
vcpkg/: avr-linux.cmake  avr-linux.toolchain.cmake
